# DTVM

./: BUILD.bazel  MODULE.bazel  build.sh
.ci/: run_test_suite.sh
.github/workflows/: commit-lint.yml  dtvm_evm_test_x86.yml  dtvm_wasm_test_x86.yml
openspec/changes/add-storage-state-persistence/: proposal.md  tasks.md
openspec/changes/add-storage-state-persistence/specs/evm-execution/: spec.md
openspec/changes/add-storage-state-persistence/specs/evmc-vm-interface/: spec.md
rust_crate/: build.rs
rust_crate/src/core/: extern.rs
src/action/: function_loader.cpp
src/cli/: CMakeLists.txt  dtvm.cpp
src/evm/: opcode_handlers.cpp  storage_diff.h
src/host/env/: env.cpp
src/runtime/: evm_instance.h  runtime.cpp
src/tests/: CMakeLists.txt  evm_host_tests.cpp  evm_precompiles.hpp  evm_state_tests.cpp  evm_test_fixtures.cpp  evm_test_fixtures.h  evm_test_host.hpp  solidity_contract_tests.cpp
src/utils/: evm.cpp  evm.h  wasm.cpp
src/vm/: dt_evmc_vm.cpp  storage_persistence.h
tests/wast/spec_extra/: invalid_block_type1.wast
tools/: run_evm_tests.py
